// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component/⚘ Organism/ForgetMyPasswordForm/Stand Alone Initial 1`] = `
<div
  className="MuiPaper-root-1 MuiPaper-shadow2-5 MuiPaper-rounded-2"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-28"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-38 MuiInputLabel-root-32 MuiInputLabel-formControl-33 MuiInputLabel-animated-36"
        data-shrink={false}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-42 MuiInput-formControl-43 MuiInput-inkbar-44 MuiInput-underline-48"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-51 MuiInput-inputSingleline-54"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value=""
        />
      </div>
    </div>
  </section>
  <button
    className="MuiButtonBase-root-72 MuiButton-root-57 MuiButton-raised-64 MuiButton-raisedPrimary-66"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-59"
    >
      Reset My Password
    </span>
    <span
      className="MuiTouchRipple-root-74"
    />
  </button>
</div>
`;

exports[`Storyshots Component/⚘ Organism/ForgetMyPasswordForm/Stand Alone Resetted 1`] = `
<div
  className="MuiPaper-root-154 MuiPaper-shadow2-158 MuiPaper-rounded-155"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-181"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-191 MuiInputLabel-root-185 MuiInputLabel-formControl-186 MuiInputLabel-animated-189 MuiInputLabel-shrink-188"
        data-shrink={true}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-195 MuiInput-formControl-196 MuiInput-inkbar-197 MuiInput-underline-201"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-204 MuiInput-inputSingleline-207"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value="adamchenwei@gmail.com"
        />
      </div>
    </div>
  </section>
  <button
    className="MuiButtonBase-root-225 MuiButton-root-210 MuiButton-raised-217 MuiButton-raisedPrimary-219"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-212"
    >
      Reset My Password
    </span>
    <span
      className="MuiTouchRipple-root-227"
    />
  </button>
</div>
`;

exports[`Storyshots Component/⚘ Organism/ForgetMyPasswordForm/Stand Alone Resetting 1`] = `
<div
  className="MuiPaper-root-81 MuiPaper-shadow2-85 MuiPaper-rounded-82"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-108"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-118 MuiInputLabel-root-112 MuiInputLabel-formControl-113 MuiInputLabel-animated-116 MuiInputLabel-shrink-115"
        data-shrink={true}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-122 MuiInput-formControl-123 MuiInput-inkbar-124 MuiInput-underline-128"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-131 MuiInput-inputSingleline-134"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value="adam@gmail.com"
        />
      </div>
    </div>
  </section>
  <button
    className="MuiButtonBase-root-152 MuiButtonBase-disabled-153 MuiButton-root-137 MuiButton-raised-144 MuiButton-raisedPrimary-146 MuiButton-disabled-149"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label-139"
    >
      Resetting...
    </span>
  </button>
</div>
`;
